2013-05-03  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_graph.php: Fixed warnings.

2013-05-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: improved the source code style.
	
	* godmode/agentes/configurar_agente.php: fixed the agents address
	with white spaces in the both sides.
	
	Fixes: #2171

2013-05-01 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/system_info.php, extensions/agents_modules.php,
	extensions/vnc_view.php, extensions/users_connected.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/lib/libupdate_manager_updates.php,
	extensions/snmp_explorer.php, extensions/insert_data.php,
	operation/agentes/tactical.php: improved the source code.
	
	* include/functions_reporting.php: fixed the links of list modules.
	
	Fixes: #3612243

2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_template.php: Add tags creation
	in module tamplates application for bug #3611909

2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: 
	Reporting builder layout and hide graph per agent option
	in agent events item for bug #3611908

2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_generalagente.php
	images/network_small.png
	images/so_win.png
	images/so_aix.png
	images/so_aix_small.png
	images/os_icons/so_win.png
	images/os_icons/so_linux.png
	images/os_icons/so_cisco.png
	images/os_icons/so_bsd_small.png
	images/os_icons/so_mac.png
	images/os_icons/so_vmware.png
	images/os_icons/so_solaris_small.png
	images/os_icons/android_small.png
	images/os_icons/so_bsd.png
	images/os_icons/so_aix_small.png
	images/os_icons/so_other_small.png
	images/os_icons/so_hpux_small.png
	images/os_icons/so_solaris.png
	images/os_icons/android.png
	images/os_icons/embedded_small.png
	images/os_icons/network_small.png
	images/os_icons/so_aix.png
	images/os_icons/so_other.png