@@ -1,3 +1,8 @@
+2013-05-04  Junichi Satoh  <junichi@rworks.jp>
+
+	* mobile/index.php, mobile/include/user.class.php,
+	include/functions.php: Fixed i18n failure in the mobile console.
+
 2013-05-03  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/functions_graph.php: Fixed warnings.
